--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1311,6 +1311,7 @@ position: relative;
 text-align: center;
 padding: 0 0 30px 15px;
 margin-left: 0px;
+transform: rotate(90deg); /* Rotate by 90 degrees */
 }
 
 .about-image:before {
@@ -3921,8 +3922,6 @@ margin: 0;
 #dan {
 padding-left: 20px;
 }
-
-
 
 
 
